--- a/PJ12/index.html
+++ b/PJ12/index.html
@@ -3,13 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Notes App</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     
 
+    <button id="addBtn">
+        <i class="fas fa-plus"></i>
+        Add Note
+    </button>
+    <div id="main">
+        <!-- <div class="note">
+            <div class="tool">
+                <i class="fa-solid fa-save"></i>
+                <i class="fa-solid fa-trash"></i>
+            </div> 
+            <textarea></textarea>
+        </div> -->
+    </div>
 
+
+    <script src="https://kit.fontawesome.com/040a8e29fc.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 </html>
