--- a/PJ13/index.html
+++ b/PJ13/index.html
@@ -12,8 +12,10 @@
     <div class="container">
         <div class="input-box">
             <input type="password" id="password" placeholder="Enter Password">
-            <button type="submit"><i class="fa-regular fa-eye-slash"></i></button>
-            <p id="message"><span id="strength">Weak</span></p>
+            <button type="submit"><i class="fa-regular fa-eye-slash" id="eye-icon"></i></button>
+            <p id="message">
+                <span id="strength">Weak</span>
+            </p>
         </div>
     </div>
     
