--- a/PJ14/index.html
+++ b/PJ14/index.html
@@ -14,10 +14,37 @@
         <h1>Password Generator</h1>
         <div class="inputBox">
             <input type="text" class="passBox" id="passBox" disabled>
-            <span class="material-icons">
+            <span class="material-icons" id="copyIcon">
                 content_copy
                 </span>
         </div>
+        <input type="range" min="10" max="30" value="10" id="inputSlider">
+        <div class="row">
+            <p>Password Length</p>
+            <span id="sliderValue">10</span>
+        </div>
+        <div class="row">
+            <label for="lowercase">Include Lowercase Letters (a-z)</label>
+            <input type="checkbox" name="lowercase" id="lowercase" checked>
+        </div>
+
+        <div class="row">
+            <label for="upercase">Include Upercase Letters (A-Z)</label>
+            <input type="checkbox" name="upercase" id="upercase" checked>
+        </div>
+
+        <div class="row">
+            <label for="numbers">Include Numbers Letters (0-9)</label>
+            <input type="checkbox" name="numbers" id="numbers" checked>
+        </div>
+
+        <div class="row">
+            <label for="symbols">Include Symbols Letters (@-*)</label>
+            <input type="checkbox" name="symbols" id="symbols" checked>
+        </div>
+
+        <button type="button" class="getBtn" id="getBtn">General Random Password</button>
+
     </div>
 
 
