--- a/PJ15/index.html
+++ b/PJ15/index.html
@@ -17,9 +17,25 @@
             </div>
             <div class="form-group">
                 <button type="submit">Caculator Age</button>
-                
             </div>
         </form>
+
+        <div class="result-container" id="resultContainer">
+            <div class="result" id="result">
+                <!-- <div class="result-item">
+                    <h3>Weeks Passed:</h3>
+                    <p>ageInWeeks</p>
+                </div>
+                <div class="result-item">
+                    <h3>Weeks Passed:</h3>
+                    <p>ageInWeeks</p>
+                </div>
+                <div class="result-item">
+                    <h3>Weeks Passed:</h3>
+                    <p>ageInWeeks</p>
+                </div> -->
+            </div>
+        </div>
 
     </div>
 
