--- a/PJ15/index.html
+++ b/PJ15/index.html
@@ -10,10 +10,10 @@
     
     <div class="container">
         <h1>Age Caculator</h1>
-        <form id="ageCaculator">
+        <form id="ageCalculator">
             <div class="form-group">
-                <label for="bỉthdate">Enter your bỉthdate</label>
-                <input type="text" id="birthday" placeholder="DD-MM-YYYY" required>
+                <label for="bỉrthdate">Enter your bỉthdate</label>
+                <input type="text" id="bỉrthdate" placeholder="DD-MM-YYYY" required>
             </div>
             <div class="form-group">
                 <button type="submit">Caculator Age</button>
