--- a/PJ15/index.html
+++ b/PJ15/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Age Caculator</title>
+    <title>Age Calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
