--- a/PJ16/index.html
+++ b/PJ16/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paragraph Generate</title>
+    <title>Paragraph Generator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
                 <label for="items">Generate Random Paragraphs:</label>
             </div>
             <div>
-                <input type="number" value="5" id="items">
+                <input type="number" value="1" id="items">
             </div>
             <div>
                 <button onclick="generate()">Generate</button>
