--- a/PJ19/index.html
+++ b/PJ19/index.html
@@ -13,6 +13,8 @@
         <button>click me to see magic</button>
     </div>
 
+    <p>I'm too busy for learning about C#, .Net and Asp.Net so i think i will stop this project some day.</p>
+
 
     <script src="script.js"></script>
 </body>
