--- a/PJ20/index.html
+++ b/PJ20/index.html
@@ -26,6 +26,14 @@
             <span class="color-cyan">Cyan</span>
         </h1>
     </div>
+    <div class="form-group">
+        <label for="color-input">Enter a color:</label>
+        <input type="text" id="color-input" name="color-input">
+        <button id="color-btn">Change Color</button>
+        <p id="color-result"></p>
+        <div id="color-preview"></div>
+        <button id="reset-btn">Reset</button>
+    </div>
 
 
     <script src="script.js"></script>
