--- a/PJ19/index.html
+++ b/PJ19/index.html
@@ -9,12 +9,27 @@
 <body>
     
     <div class="container">
-        <h1>Something i'll doing here</h1>
-        <button>click me to see magic</button>
+        <div class="key-container" id="keyContainer">
+    <div class="key-container">
+      <h4>Key</h4>
+      <div class="key-content">
+      </div>
     </div>
 
-    <p>I'm too busy for learning about C#, .Net and Asp.Net so i think i will stop this project some day.</p>
+    <div class="key-container">
+      <h4>Code</h4>
+      <div class="key-content">
+      </div>
+    </div>
 
+    <div class="key-container">
+      <h4>Key Code</h4>
+      <div class="key-content">
+      </div>
+    </div>
+
+    </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
