--- a/PJ20/index.html
+++ b/PJ20/index.html
@@ -3,41 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PJ20</title>
+    <title>Animation Testing</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
     <div class="container">
-        <h1>
-            <span class="color-red">Red</span>
-            <span class="color-blue">Blue</span>
-            <span class="color-green">Green</span>
-            <span class="color-yellow">Yellow</span>
-            <span class="color-purple">Purple</span>
-            <span class="color-orange">Orange</span>
-            <span class="color-pink">Pink</span>
-            <span class="color-gray">Gray</span>
-            <span class="color-black">Black</span>
-            <span class="color-white">White</span>
-            <span class="color-brown">Brown</span>
-            <span class="color-light-gray">Light Gray</span>
-            <span class="color-dark-gray">Dark Gray</span>
-            <span class="color-cyan">Cyan</span>
-        </h1>
     </div>
-    <div class="form-group">
-        <label for="color-input">Enter a color:</label>
-        <input type="text" id="color-input" name="color-input">
-        <button id="color-btn">Change Color</button>
-        <p id="color-result"></p>
-        <div id="color-preview"></div>
-        <button id="reset-btn">Reset</button>
-    </div> 
-
-
-    
-
 
     <script src="script.js"></script>
 </body>
